# sensor_to_Linux

./: CMakeLists.txt  CMakePresets.json  README.md  SESSION_RESULT.md
cmake/: generate_manifest.cmake
contracts/: contract-manifest.sha256  ipc_action_catalog.md  json_field_policy.md  mgr_sensor_ipc.schema.json
include/savvy/core/: clock.h  error.h  lifecycle.h  queue.h  snapshot.h
include/savvy/platform/: ipc_cancel.h  ipc_client.h  ipc_reconnect.h  ipc_test_hooks.h  ipc_transport.h  serial_provider.h
include/savvy/protocol/: config_codec.h  data_result_codec.h  device_codec.h  ipc_action_catalog.h  ipc_envelope.h  json_codec.h  packet_codec.h  stream_parser.h
session_results/wave1/: CC-SENSOR-CORE.md  CC-SENSOR-STREAM.md
session_results/wave1/integration/: CC-SENSOR-W1-INTEGRATION-FIX-1-SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION-FIX-1.md  CC-SENSOR-W1-INTEGRATION-FIX-2-SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION-FIX-2.md  CC-SENSOR-W1-INTEGRATION-FIX-MERGE-1-SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION-FIX-MERGE-1.md  CC-SENSOR-W1-INTEGRATION.md  CC-SENSOR-W1-SHA_LEDGER.md
session_results/wave1/review/: CC-SENSOR-CORE-CODEX-FIX-RESULT.md  CC-SENSOR-CORE_CODEX_FIX_RESULT_2.md  CC-SENSOR-CORE_CODEX_FIX_RESULT_3.md  CC-SENSOR-CORE_CODEX_REVIEW_1.md  CC-SENSOR-CORE_CODEX_REVIEW_2.md  CC-SENSOR-CORE_CODEX_REVIEW_3.md  CC-SENSOR-CORE_CODEX_REVIEW_4.md  CC-SENSOR-CORE_SHA_LEDGER.md  CC-SENSOR-STREAM_CODEX_REVIEW_1.md  CC-SENSOR-STREAM_CODEX_REVIEW_2.md  CC-SENSOR-STREAM_SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION-FIX-1_CODEX_REVIEW_1.md  CC-SENSOR-W1-INTEGRATION-FIX-1_CODEX_REVIEW_1_SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION-FIX-2_CODEX_REVIEW_2.md  CC-SENSOR-W1-INTEGRATION-FIX-2_CODEX_REVIEW_2_SHA_LEDGER.md  CC-SENSOR-W1-INTEGRATION_CODEX_REVIEW_3.md  CC-SENSOR-W1-INTEGRATION_CODEX_REVIEW_3_SHA_LEDGER.md
src/core/: CMakeLists.txt  clock.c  error.c  lifecycle.c  queue.c  snapshot.c
src/features/compression/: CMakeLists.txt  bzip_codec.c
src/features/compression/include/sensor_stream/: bzip.h
src/features/compression/tests/: CMakeLists.txt  test_bzip.c
src/features/config/: CMakeLists.txt  config_store.c  config_store.h  device_store.c  device_store.h
src/features/health/: CMakeLists.txt  sensor_health.c  sensor_health.h  sensor_lifecycle.c  sensor_lifecycle.h
src/features/mgr_ipc/: CMakeLists.txt  cancel_source_portable.c  mgr_ipc_client.c  mgr_ipc_client.h  real_connector.c  real_connector.h
src/features/mode_state/: CMakeLists.txt  mode_state.c  mode_state.h
src/features/result_policy/: CMakeLists.txt  result_policy.c
src/features/result_policy/include/sensor_stream/: result_policy.h
src/features/state_report/: CMakeLists.txt  state_report.c  state_report.h
src/features/stream/: CMakeLists.txt  session.c
src/features/stream/include/sensor_stream/: session.h
src/features/update_guard/: CMakeLists.txt  update_guard.c  update_guard.h
src/features/wav/: CMakeLists.txt  wav_encoder.c
src/features/wav/include/sensor_stream/: wav.h
src/features/wav/tests/: CMakeLists.txt  test_wav.c
src/platform/interfaces/: CMakeLists.txt  ipc_reconnect.c
src/platform/linux/ipc/: CMakeLists.txt  ipc_client.c  ipc_test_hooks.h  ipc_transport_common.c  ipc_transport_common.h
src/platform/linux/tcp_8141/: CMakeLists.txt  tcp_channel.c
src/platform/linux/tcp_8141/include/sensor_platform/: tcp_channel.h
src/protocol/: CMakeLists.txt
src/protocol/ipc/: ipc_action_catalog.c  ipc_envelope_codec.c
src/protocol/json/: config_codec.c  data_result_codec.c  device_codec.c  field_table.c  field_table.h  json_codec.c
src/protocol/packet/: packet_codec.c  stream_parser.c
tests/contract/: CMakeLists.txt  test_ipc.c  test_json.c  test_packet.c
tests/integration/sensor_core/mgr_ipc/: test_real_transport_integration.c
tests/integration/sensor_stream/session/: CMakeLists.txt  test_session.c
tests/unit/sensor_core/config/: test_config_store.c
tests/unit/sensor_core/health/: test_lifecycle.c
tests/unit/sensor_core/mgr_ipc/: fake_transport.c  fake_transport.h  mgr_ipc_test_hooks.h  test_mgr_ipc_client.c
tests/unit/sensor_core/mode_state/: test_mode_state.c
tests/unit/sensor_core/state_report/: test_state_report.c
tests/unit/sensor_core/update_guard/: test_update_guard.c
tests/unit/sensor_stream/result_policy/: CMakeLists.txt  test_result_policy.c
tests/unit/sensor_stream/tcp_channel/: CMakeLists.txt  test_tcp_channel.c
tools/mock_mgr/: CMakeLists.txt  mock_mgr.c
tools/mock_streaming_server/: CMakeLists.txt  mock_streaming_server.c  test_mock_response.c
